syntax = "proto3";

package profile.v1;
option go_package="github.com/msqtt/sevencowcloud-shortvideo-service/api/pb/v1/profile;pb_prf";


message Profile {
	string real_name = 1;
	string mood = 2;
	string gender = 3;
  int64 birth_date = 4;
	string introduction = 5;
	int64 updated_at = 6;
}
